코드수정과 파비콘 설정
스타일 클래스수정과 파비콘 설정

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <meta name="format-detection" content="telephone=no,address=no,email=no">
   <title> chrysler </title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 <body ontouchstart=""> <!-- iphone 터치인식시키기   ontouchstart=""-->
   <header>
     <h1><img src="./images/h1_logo.png" alt="chrysler"></h1>
-    <a href="#t" class="toggle">
+    <a href="javascript:;" class="toggle">
       <img src="./images/toggle.png" alt="전체메뉴">
     </a>
     <nav class="navbar">
